--- a/web/index.html
+++ b/web/index.html
@@ -347,6 +347,7 @@
       <a href="tips.html">Hydration Tips</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
+      <a href="privacy_policy.html">Privacy Policy</a>
       <a href="https://play.google.com/store/apps/details?id=com.kt.water.reminder" target="_blank" rel="noopener" style="padding:0; background:none; box-shadow:none; border:none;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Get it on Google Play" style="height:32px; width:auto; background:none; box-shadow:none; border:none; margin:0; padding:0;">
       </a>
@@ -415,5 +416,8 @@
     </ul>
   </div>
   <!-- Footer intentionally left blank -->
+  <footer style="text-align:center; margin:32px 0 12px 0; color:#555; font-size:0.98rem;">
+    &copy; 2024 AquaTime. All rights reserved. | <a href="privacy_policy.html" style="color:#1976d2; text-decoration:underline;">Privacy Policy</a>
+  </footer>
 </body>
 </html>
